# rtumopp

./: .Rbuildignore  .gitignore  .travis.yml  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  air.toml  authors.html  cleanup  configure  index.html  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
R/: RcppExports.R  branch-length.R  coord.R  cpp11.R  demography.R  dispersion.R  distance.R  driver.R  frequency.R  fst.R  graph.R  heterogeneity.R  hex.R  layout.R  morphology.R  ms.R  path.R  plot-genealogy.R  plot-rgl.R  plot.R  population.R  read.R  sample-combn.R  sample.R  summarize.R  sysdata.rda  tumopp-package.R  tumopp.R  vaf-fst.R  vaf.R  write.R
articles/: benchmark.html  genealogy.html  growth.html  index.html  sampling.html  tumopp.html
demo/: 00Index  early.R  phylogeny.R  rgl.R  run.R  sample.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: benchmark.html  genealogy.html  growth.html  index.html  sampling.html  tumopp.html
docs/reference/: add_phi.html  branch-length.html  coord.html  count_extant.html  cuboid.html  demography.html  dispersion.html  distance.html  drivers.html  frequency.html  fst.html  gggenealogy.html  graph.html  heterogeneity.html  hex.html  index.html  layout.html  morphology.html  ms.html  path.html  plot-biopsy.html  plot-genealogy.html  plot-igraph.html  plot-rgl.html  plot-section.html  plot.html  population.html  radius.html  rcpprun.html  read.html  read_tumopp.html  rpois_dispersion.html  sample-combn.html  sample.html  summarize.html  summarize_capture_rate.html  summarize_demography.html  tumopp-package.html  tumopp.html  tumopp_version.html  (+2 more)
inst/: _pkgdown.yml
man/: branch-length.Rd  coord.Rd  cuboid.Rd  demography.Rd  dispersion.Rd  distance.Rd  drivers.Rd  frequency.Rd  fst.Rd  graph.Rd  heterogeneity.Rd  hex.Rd  layout.Rd  morphology.Rd  ms.Rd  path.Rd  plot-biopsy.Rd  plot-genealogy.Rd  plot-igraph.Rd  plot-rgl.Rd  plot-section.Rd  plot.Rd  population.Rd  rcpprun.Rd  read.Rd  sample-combn.Rd  sample.Rd  summarize.Rd  tumopp-package.Rd  tumopp.Rd  vaf.Rd  write.Rd
reference/: add_col.html  as.array.cuboid.html  coord.html  cuboid.html  demography.html  dispersion.html  dist_vaf.html  distance.html  drivers.html  edge_lengths.html  fst.html  graph.html  gst.html  heterogeneity.html  hex.html  index.html  morphological_stats.html  morphology.html  ms.html  path.html  plot-biopsy.html  plot-genealogy.html  plot-rgl.html  plot-section.html  plot.html  plot_lattice2d.html  population.html  read.html  sample-combn.html  sample.html  sim_sample_biopsy.html  sort_vaf.html  subtree.html  summarize.html  transform_rotate.html  tumopp-package.html  tumopp.default.html  tumopp.html  vaf.html  write.html
src/: .gitignore  CMakeLists.txt  RcppExports.cpp  algorithm.cpp  config.cpp.in  cpp11.cpp  run.cpp
tests/: testthat.R
tests/testthat/: test-coord.R  test-fst.R  test-hex.R  test-io.R  test-morphology.R  test-ms.R  test-plot.R  test-run.R  test-vaf.R
vignettes/: benchmark.Rmd  genealogy.Rmd  growth.Rmd  sampling.Rmd  tumopp.Rmd
